- Styles: Avoid flicker

--- a/browser_action/styles/unicode-dialog.css
+++ b/browser_action/styles/unicode-dialog.css
@@ -223,6 +223,7 @@ radiogroup {
   min-height: 20px;
 }
 .miller-columns {
+  display: none;
   overflow: hidden !important;
 }
 
